--- a/UcasProjectManagement/UcasProWindowsForm/Forms/Attachments/FrmAttachemntsShow.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/Attachments/FrmAttachemntsShow.resx
@@ -127,61 +127,62 @@
     <value>284, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="gridViewCommandColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABI5JREFUSEvNlX9Q02Ucxx/UXKQVeiSWorvI4DQTs/RQOeXqsq6r47zr6jpTKs9O
-        xjUCkXF6sVBOEuUbDJhDYuPH2ta04WEKU2CM6WBjfDe2AQJjkMYvwfmDH5Zd7x7mrrIzL/dPve7ef30/
-        z/v9eZ7n8/1+yf+OpcyTQRGFwYnrK0I10crQ+mh5aP16+RImSr5IuE6xlOsr84+56bNjtyjWeOJNMeC1
-        bMBO48t4pyoc66SLECEKxqrikDhfqR+kks17jYlQX5NANpSFgh9Tsa06BvO/5LAh2XM2+6r8Z4Myyq2d
-        rETDz1o0/lKLwq6j4KTO9hA+CfKVPCQMXcgQoVdHCCOw7UDRgBBlw9lQjRVi8zdrMDMjgPFV+4GYCLcb
-        1yLesgXvN25CStsb2N++FQcufYjDrk8RkjEHJJvGTzfiF2LCjVAFY2tDBN5rXIFtF1fio6bV2GVei4TW
-        jXhVEYYNqhWIPrUWL6lXu5fIlmho2MNNEUc0Uxh1ejFiqrl4/VwY3qpdhlhdON7VL8cHF1Zih3EVdprW
-        4JPmKHCVXJB8Eulb+i+h259XyPG88P0CRFYuxCtVz2D9D6HYdHYpXtM+izfPP+dV0PFHp839HNEMEhdc
-        8hgWK54AVxWEZer5WH7yKbxYGYJIzUJwRHSSmIft/G/MyAxgA0seweMyDuaVBWJBxRw8XT4XnEOzPOSg
-        n+YsywaxrCPOZnPWKw0nQHIIAiQEM4oCMEsyA/Oz5kFrrYPD3oWGBiMrk30rZRhRYn5+0YMDWdYZa7HY
-        pW22ToyMjGFiYgrj45PYKIkGoQF0uhD4RSAOSA7haE4ejomLUSQpQXm5EmVlKpSWqlCjNWmoVcBdRwrt
-        NHLatKO9wzNw5SpuXp+C4YIVt25NYGrqNiYnb8NxuR0kk+D5I+EokZeiooIalisgk8lx+HAO8vLEOFtd
-        hxaLHQWSk6C2YVQLidVqZXtdbty4Ts0mfv1Dw0MejAyPweO5iYHBEbj7rqCrux9W2yXU6SyQK2ug/K4G
-        Z87W4qLRjL7+QZyvt+CrHAV28TKnA3ZQrSM2mw29vf04U62HTm+CucUOl+syxsZuYmryDibH78BzbQIj
-        Q9fR1zcEp9MNS2sXHI5eKhc1HoDZ0ol8iQYp+8T4bM/X2P5x0m/UfAsV8QboG03QNTTBZLailW2DsakF
-        DY3NOFdrQJPJ6u16ePgarl69gZ6en2Cnxq7eK+jo7EepvAb7hMXgp+Qhae8RxPME7vj4PX9e9HRAR2fP
-        PQFWmwO2Nifa7HfFWu206zZ66SN0Zx56XAM4ddqAjKxSJKaIsCctD8l7D2L37iSGz+ff+20ym83S7u4e
-        ejQ2r8n9AqZlNLXibVssKkdPoVyhRZKgAMkCEfanM+Alprl5vOR//icYDIZInU7H6PV6d3NzM1jWiktd
-        3XC2d9wTEF67AscHiyESn0B6RiFS0w4gIeE+XT8IjUbDVSgUcTKZTKpWq91VVafpi6SH3e7A6OioV8ck
-        UiR8nsry+X85a39hGIabmZkZm56eLhQIBPW5ubn1PB5P6Hv8X0PI73NNHRh4TuvJAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAASOSURBVEhLzZV/UNNlHMcf1FykFXoklqK7yOA0E7P0UDnl
+        6rKuq+O86+o6UyrPTsY1ApFxerFQThLlGwyYQ2Ljx9rWtOFhClNgjOlgY3w3tgECY5DGL8H5gx+WXe8e
+        5q6yMy/3T73u3n99P8/7/Xme5/P9fsn/jqXMk0ERhcGJ6ytCNdHK0PpoeWj9evkSJkq+SLhOsZTrK/OP
+        uemzY7co1njiTTHgtWzATuPLeKcqHOukixAhCsaq4pA4X6kfpJLNe42JUF+TQDaUhYIfU7GtOgbzv+Sw
+        IdlzNvuq/GeDMsqtnaxEw89aNP5Si8Kuo+CkzvYQPgnylTwkDF3IEKFXRwgjsO1A0YAQZcPZUI0VYvM3
+        azAzI4DxVfuBmAi3G9ci3rIF7zduQkrbG9jfvhUHLn2Iw65PEZIxBySbxk834hdiwo1QBWNrQwTea1yB
+        bRdX4qOm1dhlXouE1o14VRGGDaoViD61Fi+pV7uXyJZoaNjDTRFHNFMYdXoxYqq5eP1cGN6qXYZYXTje
+        1S/HBxdWYodxFXaa1uCT5ihwlVyQfBLpW/ovodufV8jxvPD9AkRWLsQrVc9g/Q+h2HR2KV7TPos3zz/n
+        VdDxR6fN/RzRDBIXXPIYFiueAFcVhGXq+Vh+8im8WBmCSM1CcER0kpiH7fxvzMgMYANLHsHjMg7mlQVi
+        QcUcPF0+F5xDszzkoJ/mLMsGsawjzmZz1isNJ0ByCAIkBDOKAjBLMgPzs+ZBa62Dw96FhgYjK5N9K2UY
+        UWJ+ftGDA1nWGWux2KVttk6MjIxhYmIK4+OT2CiJBqEBdLoQ+EUgDkgO4WhOHo6Ji1EkKUF5uRJlZSqU
+        lqpQozVpqFXAXUcK7TRy2rSjvcMzcOUqbl6fguGCFbduTWBq6jYmJ2/DcbkdJJPg+SPhKJGXoqKCGpYr
+        IJPJcfhwDvLyxDhbXYcWix0FkpOgtmFUC4nVamV7XW7cuE7NJn79Q8NDHowMj8HjuYmBwRG4+66gq7sf
+        Vtsl1OkskCtroPyuBmfO1uKi0Yy+/kGcr7fgqxwFdvEypwN2UK0jNpsNvb39OFOth05vgrnFDpfrMsbG
+        bmJq8g4mx+/Ac20CI0PX0dc3BKfTDUtrFxyOXioXNR6A2dKJfIkGKfvE+GzP19j+cdJv1HwLFfEG6BtN
+        0DU0wWS2opVtg7GpBQ2NzThXa0CTyertenj4Gq5evYGenp9gp8au3ivo6OxHqbwG+4TF4KfkIWnvEcTz
+        BO74+D1/XvR0QEdnzz0BVpsDtjYn2ux3xVrttOs2eukjdGceelwDOHXagIysUiSmiLAnLQ/Jew9i9+4k
+        hs/n3/ttMpvN0u7uHno0Nq/J/QKmZTS14m1bLCpHT6FcoUWSoADJAhH2pzPgJaa5ebzkf/4nGAyGSJ1O
+        x+j1endzczNY1opLXd1wtnfcExBeuwLHB4shEp9AekYhUtMOICHhPl0/CI1Gw1UoFHEymUyqVqvdVVWn
+        6Yukh93uwOjoqFfHJFIkfJ7K8vl/OWt/YRiGm5mZGZueni4UCAT1ubm59TweT+h7/F9DyO9zTR0YeE7r
+        yQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="gridViewCommandColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
-        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
-        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
-        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
-        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
-        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
-        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
-        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
-        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
-        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
-        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
-        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
-        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
-        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
-        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
-        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
-        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
-        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
-        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
-        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
-        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
-        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
-        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
-        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
-        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
-        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
-        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYYSURBVEhLjVZ7TFN3GGU6ZfhEfMXH1Ck+ksU9zEzUGRUX
+        39ON4RaVZTp1zhdTY7Jh1PlW4qYs8ZUBvhAuVXwBhVYKaClooVDaQmlpS2lLBeQlVlAmurNzK3+MiWZf
+        8iW39/Z3zved7zu39eksduzYMUF5Nxcqtbo1PT3dI2emyOUeQZriEQTBE888Ex3Vdj72YptUKp3Rfuz/
+        RURExPSoqKh4a6ULjoY6mF0uGGxW5BcXQ6nJg1x5BzdkaTh5Lgbpt7OQX1iIDWFhc9uPvzHeCg8P769Q
+        KNQpmRnIK9LC5HSgmOBaswlqgx4qTT7SVdmQ8vnZ+DikZWRADC2f7dq1a2k7zusjQSKpSrolR9zVRKiL
+        ili9EzqLGQXGEnZgQG5hATJzc5BBkss3b0CWlekleNL2DPksiCQr2qE6jz9jYlIlSTcRn5jo7cDMDozl
+        Npjs5Uw7iq0WaEkmkifJZVBkK70EbcxW/A2NToc9+/evbod7NX6PjNwgVShwQRC82locFTCYTNBSf53R
+        yCyBxqCDRq9HVk4O7ty9i5bnbXj4pAVNT5/gQWMjslQq7Nm3b2s7ZMdgixNvpEpx6cpl5OXlwcKKDZRG
+        y4p1eh10BgN0/KwrEQlLuGX3kKpIh3jmanISEijteSEeUQkJj8LCwnzbYTvGRYmkPOH6deTfuwdzSQlK
+        OUATOzAR1ERQs9kMs6UMRnZWJM4lT43MHBVSMxS4Jk1Bwo3rEJIEz2sJTsbESK7wSwWUoEyrhY4yaLKz
+        UUBfaLlFOjG1hTCwmyJKpeF3cvPzkJWbS6Ic7xoLaamvJ9gbEbFScusW8liRiQeKlUoUU9dCjQbFlMlG
+        2cwcpsVUCqvVijKbDSVl5vbha5HDTZPRmJ0SVM+ZK982eYpakq1s1rNqo0yGImYOq2tOTkHBd6tw/WwM
+        nNXVKOUSmDh4s8WCUkpmoFd0JC0imej+VwhKFiy85fp2DS6MGfdi82ezX5hZsU0mRy63ynL8OJ4tWwFX
+        2HZETZoMadwl2Lm6RnZk5izKaEYT19lcUQGruxLp6nsdCZQzg3ZZFgajeuN2eLaE49igIdgSNAt6OrWM
+        4FWzZqN86y+ou5SImnU/IWneQuqvg5vecBHUXXUfVfV1cNRUw93YAHVhYUeC2N4B28q/XAZH8HK4Vm+E
+        Z9N2rPcPwMpJH6Ni0WJY1m6C/cBRuLeF4xGLODV3Ia5dlsAhblSp0bvONpryfl0dHv7VikISzJ8/v6NE
+        R/z7b7LO/wLWRSGwL1sF64rvcWLkGBhClsO6eTvsq35EVUgojs0IwtGjEbByBs7SUjgoj4svRjerr37Y
+        iBa6ulMCMXZ3811XNjUIxtkLYKRkLgLqlnyN4sUhcJM4ctoMHPx1N8ppQhfXs5w+cHKLKqm7u6bGS9Aq
+        ElgsnROIsWPkqDjlpCnQfPIp1FNnIn8aZzEtCD+PnYBDe/eigttVnnUbZvrDRh9UcIucTidcnMODpiY8
+        exOBY/PmRTsnfoBrg4bjzohAKEaORSYzm7m+dx9EhIaikQaroQ/czBpuTi2BGxrq8fCxBw3NzXguElit
+        rxKYQkOX6j9fgvTho5E6cDiSBw6DomcAkvsNRjIJVUNG4Vjvvji1ejUqWLmD7yc7XyFOklRWvpSovvkx
+        4Ulg+w9BZnDwh6o58yAbMgI3CZhGcHkPf0SOHoervQIg8x8E6eDhyOL9gz5dcG7nTtRyqJWU5z7lqRL1
+        ZxcNLeKIRQJbRwL9tOm/5RJc2ncgVAQqI8mxiR8h8sxpXFvzA+Q+PlD1HYCMwe/ibhc/xAaOg54Ge1Rf
+        j/raWjQ+auIr+wkaW592ThDczXdtDaV5QIB6VntgVGBOGu2O+gY8Y9u6Q0fgHjAULv+BqOnZD6kh36C6
+        pdkL1llw6J7AwMCOM5jTo9cavDce+7r7XfDx8xsWffp0pSQ6ulKIibYfFwT7gZlznU1d38EfEyY82HD4
+        sO1ibGyFEB9vjxPi7fyX4U0hUbDfVChqT5w6ZSLkkJfI/LFndhMv3vfz+8rPx2coL3sw+4j3GF2Z4nXA
+        +O7dQ3x9fQN53ZPZnSmGeP7fKYZ4hhg+b/8DtYIO5tJ+Z4wAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
