--- a/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmEmployeeMng.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmEmployeeMng.resx
@@ -121,62 +121,61 @@
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUJSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
-        U0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg22s27puo0hgtOyt3bquL+vbus1tpS+393bt3npvX07/
-        Pveuo2LRRBN9kl/Ozb3n/P/nPM8956j+18jn8/sYY10F9P8AA9EBoLIgVRokXpFOpyPU6V9HNpsNUPNU
-        QbIYuXx+P32czOWXO7J8HvSOAHJMhp7/DuorD5X700pOFGSLITFWuyKuG4ujss2L9zv8qGr3Y0erD9u0
-        Hmxt9uD1a+4SXmtyo+yyA1qfoIwXGWsqyBZDyjKN0+OjuQC+uIhWMtEHZtFOtPnjaCGavXFc8wolNBFX
-        Rnl4BRG0EIgZdqUgW4wUGdhHfSxL6XDzKRIT0FoQVkQ8AhrdPK48hHrigjOmjJOzsJRh9QXZYsylmcZG
-        BvIS22j2cno+MYzjw+vj2Nsxhir9GHbq/NhO6foz77T48CqlqcW/nKJF8WEGEtNYHF6WlBhiqRwmkmlM
-        EnI7npAUAjKzpYzJbSKNWTEPnsaSxrmCbDHiKaYZIAPSp2XH8DYVdafOh0qaofy8hYr5atMoyq+WsrHe
-        hYpGL7pCEhxJQD/Fuo8AqwrSyxEjg7sjHhZdYjTrDKyRlMIwMRRZwiBhkQk/iJlwxrM4dcuOQ7VN8IiA
-        Ngicn2C1BenlCC1mNUabhwm0TMNEEkd6ZnCsL4ijhLoniMOmGRw0TuPL7qkH+P7uDOpGOFSZglDtUeNA
-        9VmEqQ7dCeC0ff7yiX6+6r7BnWEP45by6JqYw3ckeqw/pBh8S8/fkNAh4wy+JhOZg6ZpqIldlL4n6z1Y
-        82sCq/QCVB8ch/rUedAi0D7qzV1yp24oBtNzZGB1s4m5LJy8BOPMIozBBZiCi7gzvaDQTdyemsctop++
-        WUML+MzCY40+jEd19/BMdxKrDbNQ7VbjcE0dzEJebYrnNygGkwkysLhZaIHhrJ2K3OLBDiryu1TkN2kH
-        b6bfsKJxFK9cdWLjVS9euODFOm0Aq9tDeKwzgpe6BTx9PYxVnbSKOhee33XgK0V4JcYTac2dARfzCBk4
-        Y2mYQykMKCyhX+beMkPRNCxTPHYYXFA1c3jCEEV5XwIv3uahouqu0U7jc+N0R0G2GN64bDDKxpMM5xw8
-        dtMZtLdjHHv0Aexs8ysreUvrwybtDH5qa4W9twbl/XGsN2dR1kNpaZ7BIw0TOG7lIEnsYkG2GG7ZoM/F
-        XHwGhsl5/DISQ52dx5kRHqdtMWiGOZy0CVD3RlF/WU0H1knE+RHsdSxA1SLg8bYp1NDEgokMbbpM6U52
-        CmTQ62QjlJ7OiXlFUBY+ZeNQY42iejCCk+4UDjeY8FHlJsTMPwKhRtisF+kv6sG6+jHcDCThn83Bzoml
-        h52Nk2qHuTRcfI5EY8oO3qUbQyUVehudNW9QkbfeiOG5977A2rXPYvuWl2Fv+BgB48842mnExoYAqq0x
-        jApZ2KNi6XHtEaT9Vk6a7AmKGAynYaViygVV2ogE7xJg9IWxYX0Zyso341N1NXRmB3qiOdylneWgyQ1S
-        PxONd3Bi6YUjh0cQK3rviRFzWFKE/4hsoOtz4oczl3DTx8FNR4KZdutANI9hLgMbGQzQOEt4MeBPiqVX
-        5ko4+cw+SyTVJWMOp/QrDHEZfXeA09uElP43uuTdC0w/FM3c/26OSIbBUKqDfpa/vvT/m1Cpfgdm0sET
-        BhgRDwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUHSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyxjIRoAAg22s27puo0iga+k2uq3r2/q6bnNr6cvtvV27t/b25fTv
+        c+86KxZNNNEn+eXc3HvO/3/O89xzjuJ/jUKhsJ8x1ltE8w/QEt0AqotS5UHiVZlMJkKd/nXkcjk/NU8V
+        JUuRLxQO0MepfGG5IysUQO8IIM8k6PnvoL7SUKk/reRkUbYUImMNK+Lq8TiqOz14r9uHmi4fdnZ4sV3l
+        xrY2N1677irj1VYXKq7YofIK8vg0Y61F2VKIOVZvcThpLoA3nkYHmWj8s+giOn1xtBNtnjiue4QyWomr
+        Th4eIQ1aCNJZdrUoW4oUGZhtTpajdLj4FIkJ6CgKyyJuAS0uHlcfQhNx0RGTx0lZWMqypqJsKeYyrH6Y
+        DKQldtLspfR8rJ3ABzcmsK97HDWacexS+7CD0vVn3m73YjOlqd23nKLF9MMMRFY/MDrGkiJDLJXHZDKD
+        KUJqJxKijF9itpxxqU1kMJsugKexpHG+KFuKeIrVG8mA9GnZMbxFRd2l9qKaZig9b6Vibm51ovJaORub
+        xlDV4kFvSIQ9CWimme4osKoovRwxMugbcbDoEqNZZ2GOpGRGiZHIEoaJIYnwg5gIRzyH07dtONzQCnca
+        UAWBC5OsoSi9HKHFXH3fsIMJtEztZBJHjQEcHwjiGKE0BnHEEMAh/Qy+0E0/wHd3A2i0cqgxBKHYq8TB
+        2nMIUx10CeCMbf7KyUG+pmQw5GDcUgG9k3P4lkSPD4Zkg2/o+WsSOqwP4CsykThkmIGS2E3pe7LJjTW/
+        JLBKI0Dx/gkoT18ALQJdTmf+sit1UzaYmSMDk51NzuXg4EXoA4vQBxdgCC6ib2ZBRkfcmZ7HbWKQvplD
+        C/h0iMcaTRiPqu/jGV0Sq7WzUOxR4khdI0xCQWmIFzbIBlMJMhiws9ACwzkbFbndjZ1U5HeoyG/QDt5C
+        v2FVixOvXHNg4zUPXrjowTqVH6u7QnisJ4KXdAKevhHGqh5aReMYnt998EtZeCUmEpn6PqOVuYUsHLEM
+        TKEU7sksYVDi/jIj0QyGpnns1I5B0cbhCW0UlQMJvHiHh4Kqu0Y1g8/0M91F2VJ44pKBjU0kGc7beeyh
+        M2hf9wT2avzY1emTV/KmyotNqgB+7OyArb8OlYNxrDflUGGktLQF8EjzJE6YOYgiu1SULYVLMjBY2Rif
+        hXZqHj9bY2i08Thr5XHGEkP9KIdTFgHK/iiarijpwDqFOG/FPvsCFO0CHu+cRh1NLJjI0qbLlu9kh0AG
+        eguzUnp6JudlQUn4tIVDnTmK2uEITrlSONJswIfVmxAz/QCEWmAxX6K/yIh1TeO45U/CN5uHjUuXH3YW
+        TmwY5TIY4/MkGpN38G71OKqp0NvprHmdirztZgzPvfs51q59Fju2vgxb80fw63/CsR49Njb7UWuOwSnk
+        YIumy49rtyAeMHPilDGYxnA4AzMVUyqo3EZEeJYAvTeMDesrUFG5BZ8oa6E22WGM5nGXdpadJjdM/Qw0
+        3s6lyy8cKdxCuqr/fjpiCouy8B+RDNQDDnx/9jJueTm46Egw0W69Fy1glMvCQgb3aNxQeNHvS6bLr8yV
+        cPDZ/UORVK+EKZzSrDDCZTU6P6exCCnNr3TJuxaYZiSa/f27KSJqh0OpbvpZ/vrS/29CofgNt1/AiPHp
+        KXsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYoSURBVEhLjVV7TFN3GGUPZfhEnBofm07RbTHuYWaizjgx
-        0aFOHcMtTpbNqXNzytSYbBh1PheJm2OJOjNA54OWIoKChVYKSClooVBuX7S0pbSlUuQlVnBMdGfnMv4Y
-        E82+5Etu7+3vnO873/nuDeovdu7c+Yr6eik0Wm1X3rXCgFKlClxRKgMZ8isB2cX0gCRVGjiZlNh9ITOj
-        Wy6Xz+899v8iPj5+XmJiosRR74W7tRk2rxdGpwPlJhPUujIo1UW4pMjF8dPJIDnKKyuxKTZ2ce/xJ8ZT
-        cXFxI1X5+dorBfkoq9LD6nHDRHC9zQqt0QCNrhx5mmLI+fyUJAW5+fkQQ89nu3fvXtWL8/hITUtryLqq
-        RMrFdGirqli9B4LdhgqLmR0YUVpZgYLSEuSTJO3yJSgKC3oI7nXfRzkLIsmaXqj+47fk5BxZ1mVI0tN7
-        OrCxA0utE1ZXLdMFk8MOPclE8iylAqpidQ9BN7MLf0EnCNh74MC6XrhH46eEhE1ylQpnpNIebe3uOhit
-        Vuipv2CxMM3QGQXoDAYUlpSg6Pp1dD7oxu17nWj/4x5utbWhUKPB3v37t/VC9g22OONSjhznL6ShrKwM
-        dlZspDR6ViwYBAhGIwT+FswioZkuu4EcVR7EMxezs5BKaX+XSnA2NfVObGxscC9s3zgvk9WmZmai/MYN
-        2MxmVHOAVnZgJaiVoDabDTZ7DSzsrEqcS5kWBSUa5OSrQBsj9VImLmRlBh5LcDw5WXaBf6qgBDV6PQTK
-        oCsuRgX3Qk8XCWLqK2FkN1WUSsf/lJaXobC0lEQlPTbOzM15PMG++PjPZFevoowVWXnApFbDRF0rdTqY
-        KJOTstk4TLu1Gg6HAzVOJ8w1tt7h61FCpyny8von8C9arNw+a7ZWVqzuMLBqi0KBKmYJq+vIvoKKT9ci
-        81QyPH4/qmkCKwdvs9tRTcmM3BWBpFUkyyu69iiBecnSq95P1uPMlGkP41aueGhjxU6FEqV0lf3nn3F/
-        9Rp4Y3cgceYsyFPOw0XrWtiRjbOo4TJaaWdbXR0cvnoUaW/0JVC/E7HbvjQK/q93ILA1DkdHj8XWiAUw
-        cFNrCN6wYCFqt32H5vPpaNz4DbLeXUr9Bfi4G16C+hpuoqGlGe5GP3xtrdBWVvYlODc0bHvt+6vhjvoY
-        3nVfI7B5B74KDcNnM99E3bLlsG/YDNfBI/Btj8MdFnFi8VJkpMngFh1Vbemxs5NLebO5Gbf/7EKlQQhE
-        Rkb2lehw6MjNjsiVcCyLhmv1WjjWfI5jE6fAGP0xHFt2wLX2SzREx+Do/AgcORIPB2fgqa6Gm/J4+WL0
-        sXr/7TZ0cqu5lI8SiLFnQPDGmjkRsCxcAgsl8xJQWPEhTMuj4SNxwtz5OPT9HtRyCb20Zy33wEMX1VN3
-        X2NjD0EXCYx2e/8EYuycOClFPXM2dG+9De2cd1A+l7OYG4Fvp76CH/btQx3dVVt4DTbuh5N7UEcXeTwe
-        eDmHW+3tuP8kAveWLct2zXgNGaMnoOjFcKgmTkUBs5j51dBhiI+JQRsXrJF74GM20jlNBG5tbcHtuwG0
-        dnTgAQlMDsejBNaYmFWG91Ygb8Jk5IyagOxR46EaHIbsEWOQTULN2Ek4OnQ4TqxbhzpW7ub7ycVXiIck
-        9fX/SNTScZfwgNn5H4KCqKjXNYvehWLsi7hMwFyCKweFImHyNFwcEgZF6GjIx0xAIe8fCnoap3ftQhOH
-        Wk95blKeBlF/dtHaKY6YHTidfQkMc+f9WEpw+fBR0BCohiRHZ7yBhJO/ImP9F1AGBUEz/Hnkj3kB158O
-        wbnwaTBwwe60tKClqQltd9r5yr6Htq4/+ieIGhC8oZHS3CJAC6s9OCm8JJcferS04j7bFn44DN/z4+AN
-        HYXGwSOQE/0R/J0dPWD9hd/vD4SHh/edwaJBQ9bjpZexf2DImaCQkPFJJ0/WpyUl1UuTk1wJMpnr0MLF
-        nvZnnsMvr06/tSn+sPPsuXN1UonElSKVuCRSqUsiS3VJ02WubJWq6diJE1ZCjv0HmR975gDxYnpIyAch
-        QUHjeDmIOUy8x3iGKV6HvTxwYHRwcHA4rwczBzLFEM//O8UQzxAj6Nm/AZ9QD+oH9nfUAAAAAElFTkSu
-        QmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYjSURBVEhLjVZ7TJN3FGUPZfhENjU+pm6iM1ncw8xEnVEx
+        8YV7MdziZNmc7uWDqXHZMOp8K3FTliguA9ycQimgIFBobYFZClooLV8LpaUtpS0VkJdYQZnozs5X+WNM
+        NLvJTb4+fufce+65vzZgoNixY8cM9ZVSaLTaHqVK6VMolb5chcKXJsv1SaSpvhSJxPdLYkKvJD2tVyaT
+        Leg79v8iNjZ2fkJCQoq9wQNXeyusHg9MDjvKq6qg1pVBob6MLHk+Tv6WBOWfRSjX67EhOnpp3/HHxhMx
+        MTHPqlQqbW5hAcoqDbC4XagiuMFqgdZkhEZXDqWmGDJ+fjolGfkFBRDDwM927dq1qg/n0ZEqlTZmX1Ig
+        +XwGtJWVrN4NwWZFhbmaHZhQqq9AYWkJCkiSdjEL8qJCP8Ht3rsoZ0EkWdMHNXD8mpSUJ82+iJSMDH8H
+        VnZgrnPA4qxjOlFlt8FAMpE8WyGHqljtJ+hl9uBv6AQBe/bvX9cH93D8FBe3QaZS4YxE4tfW5qqHyWKB
+        gfoLZjOzGjqTAJ3RiKKSEly+cgXd93px43Y3Ou/cxvWODhRpNNizb9/WPsj+wRZnZuXJcC49DWVlZbCx
+        YhOlMbBiwShAMJkg8LVQLRJW02VXkadSQjxzPicbqZT2d0kKTqem3oyOjg7sg+0ff0ildamZmSi/ehXW
+        6mrUcIAWdmAhqIWgVqsVVlstzOysUpxLmRaFJRrkFahwQZaL1KxMSLLTfY8kOJmUJE3nlyooQa3BAIEy
+        6IqLUcG9MNBFgpgGPUzsppJS6fid0vIyFJWWkqjEb+P0/LxHE+yNjf1UeukSyliRhQeq1GpUUVe9Tocq
+        yuSgbFYO02apgd1uR63Dgepaa9/wDSih0+RczAEJmpYsVWybPUcrLVZ3GVm1WS5HJbOE1XXl5KLik7XI
+        PJ0Ed1MTamgCCwdvtdlQQ8lM3BWBpJUkUxaoHiaoXhF+yfPxepyZOv3+tyvD71tZsUOuQCldZTt+HHdX
+        r4EnejsSZs2GLPkcnLSumR1ZOYtaLqOFdrbW18PubUCB9mp/AvXCsF228Ag0bdwO35YYHBszDlvCFsHI
+        Ta0leOOixajb+j1az2Wg+ctvkL0snPoL8HI3PAT1Nl5DY1srXM1N8Ha0Q6vX9yc4OzxkW917q+GK+Aie
+        dRvh27QdXweH4NNZr6N+5duwfb4JzgNH4d0Wg5ssIn5pOC6kSeESHVVj9tvZwaW81tqKG3/1QE+C5cuX
+        95foSPCzm+zL34V9ZSScq9fCvuYznJg8FabIj2DfvB3OtV+hMTIKxxaE4ejRWNg5A3dNDVyUx8OL0cvq
+        m250oJtbrTcaHyYQY/egwC9r54bBvHgFzJTMQ0DhnQ9Q9XYkvCSOm7cAB3/YjTouoYf2rOMeuOmiBuru
+        bW72E/SQwGCzDUwgxo7JU5LVs+ZA98ab0M5diPJ5nMW8MHw3bQYO7d2LerqrruhPWLkfDu5BPV3kdrvh
+        4Ryud3bi7uMIXJs3r9w58xVcGDMRlyeFQjV5GgqZxcyvh49AbFQUOrhgzdwDL7OZzmkhcHt7G27c8qG9
+        qwv3SFBptz9MYImKWmV86x0oJ76IvNETkTN6AlRDQ5AzaixySKgZNwXHho9E/Lp1qGflLt5PTl4hbpI0
+        NDyQqK3rFuEBwfEfgsKIiFc1S5ZBPm4SLhIwn+CKIcGIe3E6zg8LgTx4DGRjJ6KI7x8MeBK/7dyJFg61
+        gfJcozyNov7sor1bHDE7cDj6Exjnzf+xlOCykaOhIVAtSY7NfA1xv5zChfVfQBEQAM3I51Aw9nlceTII
+        Z0Onw8gFu9nWhraWFnTc7OSVfRsdPXcGJogYFPh5M6W5ToA2VntgSmhJPu8TtLXjLtsWDh2B97nx8ASP
+        RvPQUciL/BBN3V1+sIGCkvlCQ0P7z2DJkGHr8cJL2Dc46ExAUNCExFOnGqSJiQ2SpETncYnEeWDhUnfn
+        U8/g5xkzrm84fNjxx9mz9ZKUFGeyJMXJfxn+lGRInBdVqpYT8fEWQo57gMwfe+Yg8eHloKD3gwICxvNx
+        CHOE+B7jKab4HPLS4MGRgYGBoXweyhzMFEM8/+8UQzxDjICn/wHEzQ9F6nZFSAAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
