--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
@@ -129,62 +129,62 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQlJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNTRFSUEWAiifEF/SIJ
-        RoVgUQmYGKLLKMhGgACDbazbum6jSGC07K3duq4v69u6zW2lL7f3du3eem9fTv8+966jYtFEE32SX87N
-        vef8/+c8zz3nqP7XyOfz+xhjXQX0/wAD0QGgsiBVGiRekU6nI9TpX0c2mw1Q81RBshi5fH4/fZzM5Zc7
-        snwe9I4AckyGnv8O6isPlfvTSk4UZIshMVa7Iq4bi6OyzYv3O/yoavdjR6sP27QebG324PVr7hJea3Kj
-        7LIDWp+gjBcZayrIFkPKMo3T46O5AL64iFYy0Qdm0U60+eNoIZq9cVzzCiU0EVdGeXgFEbQQiBl2pSBb
-        jBQZ2Ed9LEvpcPMpEhPQWhBWRDwCGt08rjyEeuKCM6aMk7OwlGH1BdlizKWZxkYG8hLbaPZyej4xjOPD
-        6+PY2zGGKv0Ydur82E7p+jPvtPjwKqWpxb+cokXxYQYS01gcXpaUGGKpHCaSaUwScjuekBQCMrOljMlt
-        Io1ZMQ+expLGuYJsMeIpphkgA9KnZcfwNhV1p86HSpqh/LyFivlq0yjKr5aysd6FikYvukISHElAP8W6
-        jwCrCtLLESODuyMeFl1iNOsMrJGUwjAxFFnCIGGRCT+ImXDGszh1y45DtU3wiIA2CJyfYLUF6eUILWY1
-        RpuHCbRMw0QSR3pmcKwviKOEuieIw6YZHDRO48vuqQf4/u4M6kY4VJmCUO1R40D1WYSpDt0J4LR9/vKJ
-        fr7qvsGdYQ/jlvLompjDdyR6rD+kGHxLz9+Q0CHjDL4mE5mDpmmoiV2UvifrPVjzawKr9AJUHxyH+tR5
-        0CLQPurNXXKnbigG03NkYHWzibksnLwE48wijMEFmIKLuDO9oNBN3J6axy2in75ZQwv4zMJjjT6MR3X3
-        8Ex3EqsNs1DtVuNwTR3MQl5tiuc3KAaTCTKwuFlogeGsnYrc4sEOKvK7VOQ3aQdvpt+wonEUr1x1YuNV
-        L1644MU6bQCr20N4rDOCl7oFPH09jFWdtIo6F57fdeArRXglxhNpzZ0BF/MIGThjaZhDKQwoLKFf5t4y
-        Q9E0LFM8dhhcUDVzeMIQRXlfAi/e5qGi6q7RTuNz43RHQbYY3rhsMMrGkwznHDx20xm0t2Mce/QB7Gzz
-        Kyt5S+vDJu0Mfmprhb23BuX9caw3Z1HWQ2lpnsEjDRM4buUgSexiQbYYbtmgz8VcfAaGyXn8MhJDnZ3H
-        mREep20xaIY5nLQJUPdGUX9ZTQfWScT5Eex1LEDVIuDxtinU0MSCiQxtukzpTnYKZNDrZCOUns6JeUVQ
-        Fj5l41BjjaJ6MIKT7hQON5jwUeUmxMw/AqFG2KwX6S/qwbr6MdwMJOGfzcHOiaWHnY2Taoe5NFx8jkRj
-        yg7epRtDJRV6G501b1CRt96I4bn3vsDatc9i+5aXYW/4GAHjzzjaacTGhgCqrTGMClnYo2Lpce0RpP1W
-        TprsCYoYDKdhpWLKBVXaiATvEmD0hbFhfRnKyjfjU3U1dGYHeqI53KWd5aDJDVI/E413cGLphSOHRxAr
-        eu+JEXNYUoT/iGyg63PihzOXcNPHwU1Hgpl260A0j2EuAxsZDNA4S3gx4E+KpVfmSjj5zD5LJNUlYw6n
-        9CsMcRl9d4DT24SU/je65N0LTD8Uzdz/bo5IhsFQqoN+lr++9P+bUKl+B2bSwRMGGBEPAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUHSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyxjIRoAAg22s27puo0iga+k2uq3r2/q6bnNr6cvtvV27t/b25fTv
+        c+86KxZNNNEn+eXc3HvO/3/O89xzjuJ/jUKhsJ8x1ltE8w/QEt0AqotS5UHiVZlMJkKd/nXkcjk/NU8V
+        JUuRLxQO0MepfGG5IysUQO8IIM8k6PnvoL7SUKk/reRkUbYUImMNK+Lq8TiqOz14r9uHmi4fdnZ4sV3l
+        xrY2N1677irj1VYXKq7YofIK8vg0Y61F2VKIOVZvcThpLoA3nkYHmWj8s+giOn1xtBNtnjiue4QyWomr
+        Th4eIQ1aCNJZdrUoW4oUGZhtTpajdLj4FIkJ6CgKyyJuAS0uHlcfQhNx0RGTx0lZWMqypqJsKeYyrH6Y
+        DKQldtLspfR8rJ3ABzcmsK97HDWacexS+7CD0vVn3m73YjOlqd23nKLF9MMMRFY/MDrGkiJDLJXHZDKD
+        KUJqJxKijF9itpxxqU1kMJsugKexpHG+KFuKeIrVG8mA9GnZMbxFRd2l9qKaZig9b6Vibm51ovJaORub
+        xlDV4kFvSIQ9CWimme4osKoovRwxMugbcbDoEqNZZ2GOpGRGiZHIEoaJIYnwg5gIRzyH07dtONzQCnca
+        UAWBC5OsoSi9HKHFXH3fsIMJtEztZBJHjQEcHwjiGKE0BnHEEMAh/Qy+0E0/wHd3A2i0cqgxBKHYq8TB
+        2nMIUx10CeCMbf7KyUG+pmQw5GDcUgG9k3P4lkSPD4Zkg2/o+WsSOqwP4CsykThkmIGS2E3pe7LJjTW/
+        JLBKI0Dx/gkoT18ALQJdTmf+sit1UzaYmSMDk51NzuXg4EXoA4vQBxdgCC6ib2ZBRkfcmZ7HbWKQvplD
+        C/h0iMcaTRiPqu/jGV0Sq7WzUOxR4khdI0xCQWmIFzbIBlMJMhiws9ACwzkbFbndjZ1U5HeoyG/QDt5C
+        v2FVixOvXHNg4zUPXrjowTqVH6u7QnisJ4KXdAKevhHGqh5aReMYnt998EtZeCUmEpn6PqOVuYUsHLEM
+        TKEU7sksYVDi/jIj0QyGpnns1I5B0cbhCW0UlQMJvHiHh4Kqu0Y1g8/0M91F2VJ44pKBjU0kGc7beeyh
+        M2hf9wT2avzY1emTV/KmyotNqgB+7OyArb8OlYNxrDflUGGktLQF8EjzJE6YOYgiu1SULYVLMjBY2Rif
+        hXZqHj9bY2i08Thr5XHGEkP9KIdTFgHK/iiarijpwDqFOG/FPvsCFO0CHu+cRh1NLJjI0qbLlu9kh0AG
+        eguzUnp6JudlQUn4tIVDnTmK2uEITrlSONJswIfVmxAz/QCEWmAxX6K/yIh1TeO45U/CN5uHjUuXH3YW
+        TmwY5TIY4/MkGpN38G71OKqp0NvprHmdirztZgzPvfs51q59Fju2vgxb80fw63/CsR49Njb7UWuOwSnk
+        YIumy49rtyAeMHPilDGYxnA4AzMVUyqo3EZEeJYAvTeMDesrUFG5BZ8oa6E22WGM5nGXdpadJjdM/Qw0
+        3s6lyy8cKdxCuqr/fjpiCouy8B+RDNQDDnx/9jJueTm46Egw0W69Fy1glMvCQgb3aNxQeNHvS6bLr8yV
+        cPDZ/UORVK+EKZzSrDDCZTU6P6exCCnNr3TJuxaYZiSa/f27KSJqh0OpbvpZ/vrS/29CofgNt1/AiPHp
+        KXsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZTpl+JiIr/iYOsVHsriHmYk6I2LiC6cbwy0qy3TqnC+m
-        xmTDqPOtxE1Z4isDfMOlii+g0EoBLQUtFEpbKC1tKW2pgLzECspEd3Zu5Y8x0exLvuT23v7O+b7zfee2
-        Pl3F9u3bJyrv5kGlVrdlZGR45MxUudwjSFM9giB4EpinY2Paz5071y6VSmd2HPt/ERUVNSMmJibBWuWC
-        o7EeZpcLBpsVBSUlUGryIVfewQ1ZOk6cjUPG7WwUFBVhfUTE3I7jb4y3IiMjBygUCnVqVibyi7UwOR0o
-        IbjWbILaoIdKU4AMVQ6kfH4mIR7pmZkQQ8tnO3fuXNKB8/pIlEiqk2/JEX81CeriYlbvhM5iRqGxlB0Y
-        kFdUiKy8XGSS5PLNG5BlZ3kJnrQ/QwELIsnyDqiu48+4uDRJ8k0kJCV5OzCzA2OFDSZ7BdOOEqsFWpKJ
-        5MlyGRQ5Si9BO7MNf0Oj02H3vn2rOuBejd+jo9dLFQqcFwSvthZHJQwmE7TUX2c0MkuhMeig0euRnZuL
-        O3fvovV5Ox4+aUXz0yd40NSEbJUKu/fu3dIB2TnY4qQbaVJcunIZ+fn5sLBiA6XRsmKdXgedwQAdP+tK
-        RcJSbtk9pCkyIJ65mpKMREp7TkhATGLio4iICN8O2M5xQSKpSLx+HQX37sFcWooyDtDEDkwENRHUbDbD
-        bCmHkZ0Vi3PJVyMrV4W0TAWuSVOReOM6hGTB81qCE3Fxkiv8UiElKNdqoaMMmpwcFNIXWm6RTkxtEQzs
-        pphSafidvIJ8ZOflkSjXu8ZCetrrCfZERa2Q3LqFfFZk4oESpRIl1LVIo0EJZbJRNjOHaTGVwWq1otxm
-        Q2m5uWP4WuRy02Q0ZpcENXPmyrdOmaqW5Chb9KzaKJOhmJnL6lpSUlH43UpcPxMHZ00NyrgEJg7ebLGg
-        jJIZ6BUdSYtJJrr/FYLSBSG3XN+uxvmx418sCQp6YWbFNpkcedwqy7FjeLZ0OVwR2xAzeQqk8Zdg5+oa
-        2ZGZsyinGU1cZ3NlJazuKmSo73UmUAYF77SEhKJmwzZ4Nkfi6OCh2Bw8C3o6tZzg1bNmo2LLL6i/lITa
-        tT8heV4I9dfBTW+4COquvo/qhno4amvgbmqEuqioM8HFvgFbK75cCkfoMrhWbYBn4zas8w/AismfoHLh
-        IljWbIR9/xG4t0biEYs4OTcE1y5L4BA3qszoXWcbTXm/vh4P/2pDEQnmz5/fWaLD/gM2Wud/AevCMNiX
-        roR1+fc4PmosDGHLYN20DfaVP6I6LBxHZwbjyJEoWDkDZ1kZHJTHxRejm9XXPGxCK13dJYEYu3r4ri2f
-        Fgzj7AUwUjIXAXWLv0bJojC4SRw9fSYO/LoLFTShi+tZQR84uUVV1N1dW+slaBMJLJauCcTYPmp0vHLy
-        VGg+/QzqaUEomM5ZTA/Gz+Mm4uCePajkdlVk34aZ/rDRB5XcIqfTCRfn8KC5Gc/eRODYtGnhjkkf4trg
-        EbgzMhCKUeOQxcxhruv7LqLCw9FEg9XSB25mLTenjsCNjQ14+NiDxpYWPBcJrNZXCUzh4Uv0ny9Gxogx
-        SBs0AimDhkPROwAp/YcghYSqoaNxtG8/nFy1CpWs3MH3k52vECdJqqpeStTQ8pjwJLD9hyArNPQj1Zx5
-        kA0diZsETCe4vJc/oseMx9U+AZD5D4Z0yAhk8/4Bn244u2MH6jjUKspzn/JUi/qzi8ZWccQiga0zgX76
-        jN/yCC7tNwgqApWT5OikjxF9+hSurf4Bch8fqPoNROaQ93C3mx8uBo6HngZ71NCAhro6ND1q5iv7CZra
-        nnZNENrDd00tpXlAgAZWu390YG467Y6GRjxj27qDh+EeOAwu/0Go7d0faWHfoKa1xQvWVXDonsDAwM4z
-        mNOrz2q8PwF7e/qd9/HzGx576lSVJDa2SoiLtR8TBPv+oLnO5u7v4I+JEx+sP3TIduHixUohIcEeLyTY
-        +S/Dm0KSYL+pUNQdP3nSRMihL5H5Y8/sIV584Of3lZ+PzzBe9mK+K95jdGeK1wETevYM8/X1DeR1b2ZP
-        phji+X+nGOIZYvi8/Q/zFQ7CKoux4wAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYXSURBVEhLjVZ7TFN3GGU6ZfhEfMXH1Ck+ksU9zEzUGRET
+        39PJcIvKMp0654upMdkw6nwrcVOW+MoA33Cp4gsotFJAS0ELhdIWSktbSlsqIC+xgjLRnZ1b+WNMNPuS
+        L7m9t79zvu9837mtT2exY8eOCcp7uVCp1a3p6ekeOTNFLvcI0hSPIAieeOaZmOi28+fPt0ml0hntx/5f
+        REZGTo+Ojo63VrrgaKiD2eWCwWZFfnExlJo8yJV3cVOWhpPnYpF+Jwv5hYXYEB4+p/34W+OdiIiI/gqF
+        Qp2SmYG8Ii1MTgeKCa41m6A26KHS5CNdlQ0pn5+Nj0NaRgbE0PLZrl27lrbjvDkSJJKqpNtyxF1LhLqo
+        iNU7obOYUWAsYQcG5BYWIDM3BxkkuXLrJmRZmV6Cp23Pkc+CSLKiHarz+DM2NlWSdAvxiYneDszswFhu
+        g8lezrSj2GqBlmQieZJcBkW20kvQxmzF39DodNizf//qdrjX4/eoqA1ShQIXBMGrrcVRAYPJBC311xmN
+        zBJoDDpo9Hpk5eTg7r17aHnRhkdPW9D07CkeNjYiS6XCnn37trZDdgy2OPFmqhSXr15BXl4eLKzYQGm0
+        rFin10FnMEDHz7oSkbCEW3YfqYp0iGeuJSchgdKeF+IRnZDwODw83LcdtmNclEjKE27cQP79+zCXlKCU
+        AzSxAxNBTQQ1m80wW8pgZGdF4lzy1MjMUSE1Q4Hr0hQk3LwBIUnwvJHgZGys5Cq/VEAJyrRa6CiDJjsb
+        BfSFllukE1NbCAO7KaJUGn4nNz8PWbm5JMrxrrGQlvpmgr2RkSslt28jjxWZeKBYqUQxdS3UaFBMmWyU
+        zcxhWkylsFqtKLPZUFJmbh++FjncNBmN2SlB9ew58m2Tp6gl2cpmPas2ymQoYuawuubkFBR8two3zsbC
+        WV2NUi6BiYM3WywopWQGekVH0iKSie5/jaBk/oLbrm/X4MKYcS+XBAW9NLNim0yOXG6V5fhxPF+2Aq7w
+        7YieNBnSuMuwc3WN7MjMWZTRjCaus7miAlZ3JdLV9zsSKIOCd1kWhKB643Z4tkTg2KAh2BI8E3o6tYzg
+        VTNnoXzrL6i7nIiadT8hae4C6q+Dm95wEdRd9QBV9XVw1FTD3dgAdWFhR4JLvQO2lS9ZBkfIcrhWb4Rn
+        03as9w/AykmfomLhIljWboL9wFG4t0XgMYs4NWcBrl+RwCFuVKnRu842mvJBXR0e/dWKQhLMmzevo0RH
+        /Ptvss77EtaFobAvWwXriu9xYuQYGEKXw7p5O+yrfkRVaBiOzQjG0aORsHIGztJSOCiPiy9GN6uvftSI
+        Frq6UwIxdnfzXVc2NRjGWfNhpGQuAuoWf43iRaFwkzhq2gwc/HU3ymlCF9eznD5wcosqqbu7psZL0CoS
+        WCydE4ixY+SoOOWkKdB89jnUU4OQP42zmBaMn8dOwKG9e1HB7SrPugMz/WGjDyq4RU6nEy7O4WFTE56/
+        jcCxefPCnRM/wvVBw3F3RCAUI8cik5nNXN+7DyLDwtBIg9XQB25mDTenlsANDfV49MSDhuZmvBAJrNbX
+        CUxhYUv1XyxG+vDRSB04HMkDh0HRMwDJ/QYjmYSqIaNwrHdfnFq9GhWs3MH3k52vECdJKitfSVTf/ITw
+        JLD9hyAzJORj1ey5kA0ZgVsETCO4vIc/okaPw7VeAZD5D4J08HBk8f5Bny44t3MnajnUSsrzgPJUifqz
+        i4YWccQiga0jgX7a9N9yCS7tOxAqApWR5NjETxB15jSur/kBch8fqPoOQMbg93Gvix8uBY6DngZ7XF+P
+        +tpaND5u4iv7KRpbn3VOENLNd20NpXlIgHpWe2BUYE4a7Y76Bjxn27pDR+AeMBQu/4Go6dkPqaHfoLql
+        2QvWWXDonsDAwI4zmN2j1xp8MB77uvtd8PHzGxZz+nSlJCamUoiNsR8XBPuBoDnOpq7v4Y8JEx5uOHzY
+        dvHSpQohPt4eJ8Tb+S/Dm0KiYL+lUNSeOHXKRMghr5D5Y8/sJl586Of3lZ+Pz1Be9mD2Ee8xujLF64Dx
+        3buH+vr6BvK6J7M7Uwzx/L9TDPEMMXze/QfftQ6+YUV25wAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
